<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/totalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/total_amount_hint"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/numParticipants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/num_participants_hint"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/totalAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Switch
        android:id="@+id/switchTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_tip_text"
        app:layout_constraintTop_toBottomOf="@id/numParticipants"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="5.0"
        android:stepSize="1.0"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/switchTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tipPercentageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tip_percentage_text"
        app:layout_constraintTop_toBottomOf="@id/sliderTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        app:layout_constraintTop_toBottomOf="@id/tipPercentageText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/buttonCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
